@@ -1,18 +1,17 @@
-package com.greenlearner.threads.virtual.networkcall;
+package com.codefarm.threads.virtual.networkcall;
 
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
-//13831ms, 13330ms - cached
-//17800ms, 10135ms
-public class TraditionalThreadDemo {
+// 9039ms, 7662ms, 7688ms
+public class VirtualThreadDemo {
     
     public static void main(String[] args) throws Exception {
         
         long start = System.currentTimeMillis();
-        ExecutorService executorService = Executors.newFixedThreadPool(1000);
+        ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
         
         for (int i = 0; i < 1000; i++) {
             int finalI = i;
